Feature #289